Added weather alert logic. Created warning icon for weather alert layout. Added additional instances of resetScrollViews to account for weather map tile loading. Added startUp boolean to Utils to account for theme switching and last queried location.